--- a/style.css
+++ b/style.css
@@ -1,49 +1,52 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    box-sizing: border-box;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .navbar {
-    height: 56px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center; 
-    padding: 0 30px;
-
+    align-items: center;
+    padding: 0.6rem 1.2rem;
+    gap: 0.6rem;
+    background-color: white;
 }
 
 .Tesla-logo {
-    height: 25px;
-    width: 125px;
+    height: 1.5rem;
+    width: 7rem;
     background-image: url(./images/logo.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
 }
 
 .ul-1 {
-    height: 40px;
-    width: 450px;
-    padding-top: 10px;
-    list-style: none;
     display: flex;
-    justify-content: space-around;
-    
-    
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    gap: 0.6rem;
+    flex: 1 1 auto;
+    width: 40%;
 }
 
 .nav-btn {
-    height: 30px;
-    width: 70px;
-    border: none;
-    font-size: 15px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: white;
+    padding: 0.4rem 0.9rem;
+    font-size: 1rem;
     font-weight: 500;
-    border-radius: 10px;
+    background-color: white;
+    border: none;
+    border-radius: 0.6rem;
+    cursor: pointer;
+    white-space: nowrap;
 }
 
 .nav-btn:hover {
@@ -51,115 +54,97 @@
 }
 
 .ul-2 {
+    width: 10%;
     display: flex;
-    list-style-type: none;
-    padding-top: 10px;
-    padding-right: 40px;
-    height: 50px;
-    width: 100px;
-    justify-content: space-between;
+    list-style: none;
     align-items: center;
-
+    gap: 0.6rem;
+    flex-shrink: 0;
 }
+
+#btn1, #btn2, #btn3 {
+    height: 2rem;
+    width: 2rem;
+    background-repeat: no-repeat;
+    background-size: 1.3rem;
+    background-position: center;
+    border: none;
+    background-color: white;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
 #btn1 {
-    height: 35px;
-    width: 35px;
     background-image: url(./images/circle-question.svg);
-    background-repeat: no-repeat;
-    background-size: 20px;
-    background-position: center;
-    border: none;
-    background-color: white;
-    border-radius: 50%;
-}
-#btn2 {
-    height: 35px;
-    width: 35px;
-    background-image: url(./images/circle.svg);
-    background-repeat: no-repeat;
-    background-size: 20px;
-    background-position: center;
-    border: none;
-    background-color: white;
-    border-radius: 50%;
-}
-#btn3 {
-    height: 35px;
-    width: 35px;
-    background-image: url(./images/circle-user.svg);
-    background-repeat: no-repeat;
-    background-size: 20px;
-    background-position: center;
-    border: none;
-    background-color: white;
-    border-radius: 50%;
 }
 
-#btn1:hover{
+#btn2 {
+    background-image: url(./images/circle.svg);
+}
+
+#btn3 {
+    background-image: url(./images/circle-user.svg);
+}
+
+#btn1:hover, #btn2:hover, #btn3:hover {
     background-color: rgb(214, 214, 214);
 }
-#btn2:hover{
-    background-color: rgb(214, 214, 214);
+
+main {
+    display: flex;
+    flex-direction: column;
 }
-#btn3:hover{
-    background-color: rgb(214, 214, 214);
-}
-.s1 { 
-    display:flex;
+
+.s1 {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top:30px;
-    height: 72vh;
+    justify-content: center;
+    padding: 1.9rem 0.9rem;
+    min-height: 72vh;
     background-image: url(https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-Promo-FTC-Desktop.png);
-    background-position:center;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    text-align: center;
 }
 
 .heading {
-    font-size:63px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 6vw;
     color: white;
+    margin-bottom: 0.6rem;
 }
 
 #pr {
-    font-size:20px;
+    font-size: 3vw;
     font-weight: 600;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
+    margin-bottom: 1.2rem;
 }
 
 .buttons {
-    gap: 20px;
-    padding-top: 20px;
-   
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.6rem;
+    width: 100%;
 }
 
-#section-btn1 {
-    width: 200px;
-    margin-right: 3px;
-    height: 40px;
-    background-color:#3e6ae1;
-    color: white;
-    border: none;
-     font-family: 'Open Sans', sans-serif;
-     font-weight: 600;
-}
-
+#section-btn1,
 #section-btn2 {
-    width: 200px;
-    margin-left: 3px;
-    height: 40px;
-    background-color:#3e6ae1;
+    flex: 1 1 200px;
+    max-width: 13rem;
+    height: 2.5rem;
+    background-color: #3e6ae1;
     color: white;
     border: none;
-     font-family: 'Open Sans', sans-serif;
-     font-weight: 600;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-#section-btn1:hover{
-    background-color: #3051ac;
-}
-#section-btn2:hover{
+#section-btn1:hover,
+#section-btn2:hover {
     background-color: #3051ac;
 }
